--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project name="MyTask" basedir="." default="use">
 
-    <property name="jar.dir" value="C:/Users/Fernando/Documents/My Dropbox/PruebaPathComponentesOZ/"/>
+	<property name="jar.dir" value="C:/Users/Fernando/Documents/My Dropbox/ComponentesCriptograficos/"/>
+    <!--property name="jar.dir" value="/home/mauricio/Documentos/Personal/Proyecto/Dropbox/ComponentesCriptograficos/"/-->
 	
 	<target name="use" description="Use the Task" >
 	        <taskdef name="compilefunctor" classname="oz.compile.functor.task.CompileFunctor" classpath="${jar.dir}${ant.project.name}.jar"/>
